@@ -28,11 +28,14 @@ CatalystX::CRUD::Model - base class for CRUD models
                     );
                      
  # must define the following methods
- sub new_object { }
- sub fetch      { }
- sub search     { }
- sub iterator   { }
- sub count      { }
+ sub new_object         { }
+ sub fetch              { }
+ sub search             { }
+ sub iterator           { }
+ sub count              { }
+ sub search_related     { }
+ sub iterator_related   { }
+ sub count_related      { }
  
  1;
  
@@ -136,21 +139,37 @@ CXCM subclasses need to implement at least the following methods:
 
 =over
 
-=item fetch
+=item fetch( I<args> )
 
-Returns CatalystX::CRUD::Object->new()->read()
+Should return the equivalent of 
+CatalystX::CRUD::Object->new( I<args> )->read().
 
-=item search
+=item search( I<query> )
 
 Returns zero or more CXCO instances as an array or arrayref.
+I<query> may be the return value of make_query().
 
-=item iterator
+=item iterator( I<query> )
 
-Like search() but returns an iterator conforming to the CatalystX::CRUD::Iterator API.
+Like search() but returns an iterator conforming to the 
+CatalystX::CRUD::Iterator API.
 
-=item count
+=item count( I<query> )
 
 Like search() but returns an integer.
+
+=item search_related( I<obj>, I<relationship> )
+
+Returns zero or more CXCO instances like search().
+The instances are related to I<obj> via I<relationship>.
+
+=item iterator_related( I<obj>, I<relationship> )
+
+Like search_related() but returns an iterator.
+
+=item count_related( I<obj>, I<relationship> )
+
+Like search_related() but returns an integer.
 
 =back
 
@@ -166,10 +185,13 @@ sub new_object {
     }
 }
 
-sub fetch    { shift->throw_error("must implement fetch") }
-sub search   { shift->throw_error("must implement search") }
-sub iterator { shift->throw_error("must implement iterator") }
-sub count    { shift->throw_error("must implement count") }
+sub fetch            { shift->throw_error("must implement fetch") }
+sub search           { shift->throw_error("must implement search") }
+sub iterator         { shift->throw_error("must implement iterator") }
+sub count            { shift->throw_error("must implement count") }
+sub search_related   { shift->throw_error("must implement search_related") }
+sub iterator_related { shift->throw_error("must implement iterator_related") }
+sub count_related    { shift->throw_error("must implement count_related") }
 
 =head1 OPTIONAL METHODS
 
@@ -221,11 +243,27 @@ count(). Example of use:
                                           # $c->model('Foo')->make_query()
 
 
+=item add_related( I<obj>, I<rel_name>, I<foreign_value> )
+
+Associate foreign object identified by I<foreign_value> with I<obj>
+via the relationship I<rel_name>.
+
+It is up to the subclass to implement this method.
+
+=item rm_related( I<obj>, I<rel_name>, I<foreign_value> )
+
+Dissociate foreign object identified by I<foreign_value> from I<obj>
+via the relationship I<rel_name>.
+
+It is up to the subclass to implement this method.
+
 =back
 
 =cut
 
-sub make_query { shift->throw_error("must implement make_query()") }
+sub make_query  { shift->throw_error("must implement make_query()") }
+sub add_related { shift->throw_error("must implement add_related()") }
+sub rm_related  { shift->throw_error("must implement rm_related()") }
 
 1;
 
