@@ -134,4 +134,7 @@ Revision history for CatalystX-CRUD
 
 0.29    xxx
         * fix typos in the Tutorial
+        * add relationship methods to Controller, ModelAdapter and Model core API.
+        * added sugary alias methods for read(), update() and delete() to match CRUD.
+
 
